--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^6.1.0",
     "graphql-yoga": "^1.16.7",
+    "jsonwebtoken": "^8.4.0",
     "prisma-binding": "^2.2.8"
   }
 }
